# task_manager_pro

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 174d927b4d97_init.py
app/: main.py
app/api/: deps.py
app/api/routers/: __init__.py  auth.py  categories.py  tasks.py
app/core/: config.py  db.py  rate_limit.py  security.py
app/models/: __init__.py  category.py  refresh_token.py  task.py  user.py
app/schemas/: auth.py  category.py  task.py  user.py
app/services/: __init__.py  auth_service.py  category_service.py  task_service.py
app/tests/: conftest.py  test_auth.py  test_categories.py  test_tasks.py
